infra/Cart-service-stack.template.json
Resources:
  CartServiceVpcD5F72DCA:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: CartServiceStack/CartServiceVpc
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/Resource
  CartServiceVpcPublicSubnet1SubnetAA11F5CE:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.0.0/18
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: CartServiceStack/CartServiceVpc/PublicSubnet1
      VpcId:
        Ref: CartServiceVpcD5F72DCA
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PublicSubnet1/Subnet
  CartServiceVpcPublicSubnet1RouteTableFF083AD7:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: CartServiceStack/CartServiceVpc/PublicSubnet1
      VpcId:
        Ref: CartServiceVpcD5F72DCA
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PublicSubnet1/RouteTable
  CartServiceVpcPublicSubnet1RouteTableAssociationD816E7C3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: CartServiceVpcPublicSubnet1RouteTableFF083AD7
      SubnetId:
        Ref: CartServiceVpcPublicSubnet1SubnetAA11F5CE
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PublicSubnet1/RouteTableAssociation
  CartServiceVpcPublicSubnet1DefaultRoute7430BA60:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: CartServiceVpcIGW5639B19D
      RouteTableId:
        Ref: CartServiceVpcPublicSubnet1RouteTableFF083AD7
    DependsOn:
      - CartServiceVpcVPCGW0FCFD340
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PublicSubnet1/DefaultRoute
  CartServiceVpcPublicSubnet1EIP22E2A35E:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: CartServiceStack/CartServiceVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PublicSubnet1/EIP
  CartServiceVpcPublicSubnet1NATGateway14B405A9:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - CartServiceVpcPublicSubnet1EIP22E2A35E
          - AllocationId
      SubnetId:
        Ref: CartServiceVpcPublicSubnet1SubnetAA11F5CE
      Tags:
        - Key: Name
          Value: CartServiceStack/CartServiceVpc/PublicSubnet1
    DependsOn:
      - CartServiceVpcPublicSubnet1DefaultRoute7430BA60
      - CartServiceVpcPublicSubnet1RouteTableAssociationD816E7C3
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PublicSubnet1/NATGateway
  CartServiceVpcPublicSubnet2SubnetE7651482:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.64.0/18
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: CartServiceStack/CartServiceVpc/PublicSubnet2
      VpcId:
        Ref: CartServiceVpcD5F72DCA
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PublicSubnet2/Subnet
  CartServiceVpcPublicSubnet2RouteTable466F1718:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: CartServiceStack/CartServiceVpc/PublicSubnet2
      VpcId:
        Ref: CartServiceVpcD5F72DCA
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PublicSubnet2/RouteTable
  CartServiceVpcPublicSubnet2RouteTableAssociationE539C17D:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: CartServiceVpcPublicSubnet2RouteTable466F1718
      SubnetId:
        Ref: CartServiceVpcPublicSubnet2SubnetE7651482
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PublicSubnet2/RouteTableAssociation
  CartServiceVpcPublicSubnet2DefaultRouteE08323FA:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: CartServiceVpcIGW5639B19D
      RouteTableId:
        Ref: CartServiceVpcPublicSubnet2RouteTable466F1718
    DependsOn:
      - CartServiceVpcVPCGW0FCFD340
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PublicSubnet2/DefaultRoute
  CartServiceVpcPublicSubnet2EIPF326A91B:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: CartServiceStack/CartServiceVpc/PublicSubnet2
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PublicSubnet2/EIP
  CartServiceVpcPublicSubnet2NATGateway8E8D4139:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - CartServiceVpcPublicSubnet2EIPF326A91B
          - AllocationId
      SubnetId:
        Ref: CartServiceVpcPublicSubnet2SubnetE7651482
      Tags:
        - Key: Name
          Value: CartServiceStack/CartServiceVpc/PublicSubnet2
    DependsOn:
      - CartServiceVpcPublicSubnet2DefaultRouteE08323FA
      - CartServiceVpcPublicSubnet2RouteTableAssociationE539C17D
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PublicSubnet2/NATGateway
  CartServiceVpcPrivateSubnet1SubnetD7DE9E14:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.128.0/18
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: CartServiceStack/CartServiceVpc/PrivateSubnet1
      VpcId:
        Ref: CartServiceVpcD5F72DCA
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PrivateSubnet1/Subnet
  CartServiceVpcPrivateSubnet1RouteTableC38D60D7:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: CartServiceStack/CartServiceVpc/PrivateSubnet1
      VpcId:
        Ref: CartServiceVpcD5F72DCA
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PrivateSubnet1/RouteTable
  CartServiceVpcPrivateSubnet1RouteTableAssociationEA08A559:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: CartServiceVpcPrivateSubnet1RouteTableC38D60D7
      SubnetId:
        Ref: CartServiceVpcPrivateSubnet1SubnetD7DE9E14
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PrivateSubnet1/RouteTableAssociation
  CartServiceVpcPrivateSubnet1DefaultRoute11079C51:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: CartServiceVpcPublicSubnet1NATGateway14B405A9
      RouteTableId:
        Ref: CartServiceVpcPrivateSubnet1RouteTableC38D60D7
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PrivateSubnet1/DefaultRoute
  CartServiceVpcPrivateSubnet2Subnet744055AA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.192.0/18
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: CartServiceStack/CartServiceVpc/PrivateSubnet2
      VpcId:
        Ref: CartServiceVpcD5F72DCA
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PrivateSubnet2/Subnet
  CartServiceVpcPrivateSubnet2RouteTableC23741FA:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: CartServiceStack/CartServiceVpc/PrivateSubnet2
      VpcId:
        Ref: CartServiceVpcD5F72DCA
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PrivateSubnet2/RouteTable
  CartServiceVpcPrivateSubnet2RouteTableAssociation5E41D872:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: CartServiceVpcPrivateSubnet2RouteTableC23741FA
      SubnetId:
        Ref: CartServiceVpcPrivateSubnet2Subnet744055AA
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PrivateSubnet2/RouteTableAssociation
  CartServiceVpcPrivateSubnet2DefaultRouteABED9B03:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: CartServiceVpcPublicSubnet2NATGateway8E8D4139
      RouteTableId:
        Ref: CartServiceVpcPrivateSubnet2RouteTableC23741FA
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/PrivateSubnet2/DefaultRoute
  CartServiceVpcIGW5639B19D:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: CartServiceStack/CartServiceVpc
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/IGW
  CartServiceVpcVPCGW0FCFD340:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: CartServiceVpcIGW5639B19D
      VpcId:
        Ref: CartServiceVpcD5F72DCA
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/VPCGW
  CartServiceVpcRestrictDefaultSecurityGroupCustomResource20124A15:
    Type: Custom::VpcRestrictDefaultSG
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E
          - Arn
      DefaultSecurityGroupId:
        Fn::GetAtt:
          - CartServiceVpcD5F72DCA
          - DefaultSecurityGroup
      Account: "453726584635"
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: CartServiceStack/CartServiceVpc/RestrictDefaultSecurityGroupCustomResource/Default
  CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
      ManagedPolicyArns:
        - Fn::Sub: arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: Inline
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ec2:AuthorizeSecurityGroupIngress
                  - ec2:AuthorizeSecurityGroupEgress
                  - ec2:RevokeSecurityGroupIngress
                  - ec2:RevokeSecurityGroupEgress
                Resource:
                  - Fn::Join:
                      - ""
                      - - arn:aws:ec2:us-east-1:453726584635:security-group/
                        - Fn::GetAtt:
                            - CartServiceVpcD5F72DCA
                            - DefaultSecurityGroup
    Metadata:
      aws:cdk:path: CartServiceStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role
  CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket: cdk-hnb659fds-assets-453726584635-us-east-1
        S3Key: 7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200.zip
      Timeout: 900
      MemorySize: 128
      Handler: __entrypoint__.handler
      Role:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
          - Arn
      Runtime: nodejs20.x
      Description: Lambda function for removing all inbound/outbound rules from the VPC default security group
    DependsOn:
      - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
    Metadata:
      aws:cdk:path: CartServiceStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler
      aws:asset:path: asset.7fa1e366ee8a9ded01fc355f704cff92bfd179574e6f9cfee800a3541df1b200
      aws:asset:property: Code
  DBSecurityGroupE3B245A3:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for RDS PostgreSQL DB
      SecurityGroupEgress:
        - CidrIp: 255.255.255.255/32
          Description: Disallow all traffic
          FromPort: 252
          IpProtocol: icmp
          ToPort: 86
      VpcId:
        Ref: CartServiceVpcD5F72DCA
    Metadata:
      aws:cdk:path: CartServiceStack/DBSecurityGroup/Resource
  DBSecurityGroupfromCartServiceStackLambdaSecurityGroup52F425935432EA40F373:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      Description: Allow Lambda to connect to PostgreSQL
      FromPort: 5432
      GroupId:
        Fn::GetAtt:
          - DBSecurityGroupE3B245A3
          - GroupId
      IpProtocol: tcp
      SourceSecurityGroupId:
        Fn::GetAtt:
          - LambdaSecurityGroup0BD9FC99
          - GroupId
      ToPort: 5432
    Metadata:
      aws:cdk:path: CartServiceStack/DBSecurityGroup/from CartServiceStackLambdaSecurityGroup52F42593:5432
  LambdaSecurityGroup0BD9FC99:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for Lambda function
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: CartServiceVpcD5F72DCA
    Metadata:
      aws:cdk:path: CartServiceStack/LambdaSecurityGroup/Resource
  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for RDS DB
      SubnetIds:
        - Ref: CartServiceVpcPrivateSubnet1SubnetD7DE9E14
        - Ref: CartServiceVpcPrivateSubnet2Subnet744055AA
    Metadata:
      aws:cdk:path: CartServiceStack/DBSubnetGroup/Default
  CartServiceStackPostgreSQLDBSecret569B29583fdaad7efa858a3daf9490cf0a702aeb:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description:
        Fn::Join:
          - ""
          - - "Generated by the CDK for stack: "
            - Ref: AWS::StackName
      GenerateSecretString:
        ExcludeCharacters: " %+~`#$&*()|[]{}:;<>?!'/@\"\\"
        GenerateStringKey: password
        PasswordLength: 30
        SecretStringTemplate: '{"username":"postgres"}'
      Name: cart-service-db-credentials
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: CartServiceStack/PostgreSQLDB/Secret/Resource
  PostgreSQLDBSecretAttachmentB7367AF5:
    Type: AWS::SecretsManager::SecretTargetAttachment
    Properties:
      SecretId:
        Ref: CartServiceStackPostgreSQLDBSecret569B29583fdaad7efa858a3daf9490cf0a702aeb
      TargetId:
        Ref: PostgreSQLDB3B2D51FD
      TargetType: AWS::RDS::DBInstance
    Metadata:
      aws:cdk:path: CartServiceStack/PostgreSQLDB/Secret/Attachment/Resource
  PostgreSQLDB3B2D51FD:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: "20"
      BackupRetentionPeriod: 7
      CopyTagsToSnapshot: true
      DBInstanceClass: db.t3.micro
      DBName: cartdb
      DBSubnetGroupName:
        Ref: DBSubnetGroup
      DeleteAutomatedBackups: true
      DeletionProtection: false
      Engine: postgres
      EngineVersion: "17.4"
      MasterUserPassword:
        Fn::Join:
          - ""
          - - "{{resolve:secretsmanager:"
            - Ref: CartServiceStackPostgreSQLDBSecret569B29583fdaad7efa858a3daf9490cf0a702aeb
            - :SecretString:password::}}
      MasterUsername: postgres
      MultiAZ: false
      StorageType: gp2
      VPCSecurityGroups:
        - Fn::GetAtt:
            - DBSecurityGroupE3B245A3
            - GroupId
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: CartServiceStack/PostgreSQLDB/Resource
  NestjsLambdaFunctionServiceRole77D0ABC4:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
    DependsOn:
      - CartServiceVpcPrivateSubnet1DefaultRoute11079C51
      - CartServiceVpcPrivateSubnet1RouteTableAssociationEA08A559
      - CartServiceVpcPrivateSubnet2DefaultRouteABED9B03
      - CartServiceVpcPrivateSubnet2RouteTableAssociation5E41D872
    Metadata:
      aws:cdk:path: CartServiceStack/NestjsLambdaFunction/ServiceRole/Resource
  NestjsLambdaFunctionServiceRoleDefaultPolicy5757A1CB:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - secretsmanager:DescribeSecret
              - secretsmanager:GetSecretValue
            Effect: Allow
            Resource:
              Ref: PostgreSQLDBSecretAttachmentB7367AF5
        Version: "2012-10-17"
      PolicyName: NestjsLambdaFunctionServiceRoleDefaultPolicy5757A1CB
      Roles:
        - Ref: NestjsLambdaFunctionServiceRole77D0ABC4
    DependsOn:
      - CartServiceVpcPrivateSubnet1DefaultRoute11079C51
      - CartServiceVpcPrivateSubnet1RouteTableAssociationEA08A559
      - CartServiceVpcPrivateSubnet2DefaultRouteABED9B03
      - CartServiceVpcPrivateSubnet2RouteTableAssociation5E41D872
    Metadata:
      aws:cdk:path: CartServiceStack/NestjsLambdaFunction/ServiceRole/DefaultPolicy/Resource
  NestjsLambdaFunctionAE65263D:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket: cdk-hnb659fds-assets-453726584635-us-east-1
        S3Key: 9dc5b0fd45da7d84be1d74b257e2655caf999fc91a4393621e9b2e04961b9bff.zip
      Environment:
        Variables:
          DB_HOST:
            Fn::GetAtt:
              - PostgreSQLDB3B2D51FD
              - Endpoint.Address
          DB_PORT:
            Fn::GetAtt:
              - PostgreSQLDB3B2D51FD
              - Endpoint.Port
          DB_NAME: cartdb
          DB_SECRET_ARN:
            Ref: PostgreSQLDBSecretAttachmentB7367AF5
      Handler: index.handler
      MemorySize: 512
      Role:
        Fn::GetAtt:
          - NestjsLambdaFunctionServiceRole77D0ABC4
          - Arn
      Runtime: nodejs22.x
      Timeout: 30
      VpcConfig:
        SecurityGroupIds:
          - Fn::GetAtt:
              - LambdaSecurityGroup0BD9FC99
              - GroupId
        SubnetIds:
          - Ref: CartServiceVpcPrivateSubnet1SubnetD7DE9E14
          - Ref: CartServiceVpcPrivateSubnet2Subnet744055AA
    DependsOn:
      - CartServiceVpcPrivateSubnet1DefaultRoute11079C51
      - CartServiceVpcPrivateSubnet1RouteTableAssociationEA08A559
      - CartServiceVpcPrivateSubnet2DefaultRouteABED9B03
      - CartServiceVpcPrivateSubnet2RouteTableAssociation5E41D872
      - NestjsLambdaFunctionServiceRoleDefaultPolicy5757A1CB
      - NestjsLambdaFunctionServiceRole77D0ABC4
    Metadata:
      aws:cdk:path: CartServiceStack/NestjsLambdaFunction/Resource
      aws:asset:path: asset.9dc5b0fd45da7d84be1d74b257e2655caf999fc91a4393621e9b2e04961b9bff
      aws:asset:is-bundled: true
      aws:asset:property: Code
  NestApiD11556A8:
    Type: AWS::ApiGateway::RestApi
    Properties:
      Description: This service serves a Nest.js application.
      Name: Nest Service
    Metadata:
      aws:cdk:path: CartServiceStack/NestApi/Resource
  NestApiDeployment0317131D08b11a3321d132979be8a41fb89bb6ec:
    Type: AWS::ApiGateway::Deployment
    Properties:
      Description: This service serves a Nest.js application.
      RestApiId:
        Ref: NestApiD11556A8
    DependsOn:
      - NestApiproxyANYAE31C5D2
      - NestApiproxy06967A7F
      - NestApiANY22604690
    Metadata:
      aws:cdk:path: CartServiceStack/NestApi/Deployment/Resource
  NestApiDeploymentStageprodE3E60799:
    Type: AWS::ApiGateway::Stage
    Properties:
      DeploymentId:
        Ref: NestApiDeployment0317131D08b11a3321d132979be8a41fb89bb6ec
      RestApiId:
        Ref: NestApiD11556A8
      StageName: prod
    Metadata:
      aws:cdk:path: CartServiceStack/NestApi/DeploymentStage.prod/Resource
  NestApiproxy06967A7F:
    Type: AWS::ApiGateway::Resource
    Properties:
      ParentId:
        Fn::GetAtt:
          - NestApiD11556A8
          - RootResourceId
      PathPart: "{proxy+}"
      RestApiId:
        Ref: NestApiD11556A8
    Metadata:
      aws:cdk:path: CartServiceStack/NestApi/Default/{proxy+}/Resource
  NestApiproxyANYApiPermissionCartServiceStackNestApi576F6B49ANYproxy67CB3D3C:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Fn::GetAtt:
          - NestjsLambdaFunctionAE65263D
          - Arn
      Principal: apigateway.amazonaws.com
      SourceArn:
        Fn::Join:
          - ""
          - - "arn:aws:execute-api:us-east-1:453726584635:"
            - Ref: NestApiD11556A8
            - /
            - Ref: NestApiDeploymentStageprodE3E60799
            - /*/*
    Metadata:
      aws:cdk:path: CartServiceStack/NestApi/Default/{proxy+}/ANY/ApiPermission.CartServiceStackNestApi576F6B49.ANY..{proxy+}
  NestApiproxyANYApiPermissionTestCartServiceStackNestApi576F6B49ANYproxy1E51E610:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Fn::GetAtt:
          - NestjsLambdaFunctionAE65263D
          - Arn
      Principal: apigateway.amazonaws.com
      SourceArn:
        Fn::Join:
          - ""
          - - "arn:aws:execute-api:us-east-1:453726584635:"
            - Ref: NestApiD11556A8
            - /test-invoke-stage/*/*
    Metadata:
      aws:cdk:path: CartServiceStack/NestApi/Default/{proxy+}/ANY/ApiPermission.Test.CartServiceStackNestApi576F6B49.ANY..{proxy+}
  NestApiproxyANYAE31C5D2:
    Type: AWS::ApiGateway::Method
    Properties:
      AuthorizationType: NONE
      HttpMethod: ANY
      Integration:
        IntegrationHttpMethod: POST
        Type: AWS_PROXY
        Uri:
          Fn::Join:
            - ""
            - - arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/
              - Fn::GetAtt:
                  - NestjsLambdaFunctionAE65263D
                  - Arn
              - /invocations
      ResourceId:
        Ref: NestApiproxy06967A7F
      RestApiId:
        Ref: NestApiD11556A8
    Metadata:
      aws:cdk:path: CartServiceStack/NestApi/Default/{proxy+}/ANY/Resource
  NestApiANY22604690:
    Type: AWS::ApiGateway::Method
    Properties:
      AuthorizationType: NONE
      HttpMethod: ANY
      Integration:
        Type: MOCK
      ResourceId:
        Fn::GetAtt:
          - NestApiD11556A8
          - RootResourceId
      RestApiId:
        Ref: NestApiD11556A8
    Metadata:
      aws:cdk:path: CartServiceStack/NestApi/Default/ANY/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/91W224bNxD9luxjwGxrGwgKv62VJhCaxILk5qGCEYzI8Zo2l1yQQ9mbhf494GUvjp0iQfpgFBAg7gzn8HCuPC6P/nhd/v4C7twrLm5fKbkr+w0Bv2Vw5z73yI/L/lPLt33RwH31xRWnxcvicMkWV/rTasFWfqck3/idRtr2BexBKthJJan7x2iMu1mxb/lS5DWXwp4pw2/zdwNtAlm25/o9eM2vi1OyHlkh2/3rxTfbwTlZ62W7f10JYdG5c72wCCSNTtTYM2ERiQjxEegdEN5BV5xui5fF5bMh+DxYfNdNMcVSYoXV2njCC9gpnOSTrHLOcBmBx81h8edyFf4mdLaycg+E/3nGXoFyzyAWv0bj+TB5JjRSFi41odU45lDqffmrIgJ+3aAmtkHuraTunTW+3faBbD5KoONWtiM0K0Apc1cpde5pZ7wWmWkuh6WuA6G1V5jqIc [...]
    Metadata:
      aws:cdk:path: CartServiceStack/CDKMetadata/Default
Outputs:
  NestApiEndpoint3F51B14E:
    Value:
      Fn::Join:
        - ""
        - - https://
          - Ref: NestApiD11556A8
          - .execute-api.us-east-1.
          - Ref: AWS::URLSuffix
          - /
          - Ref: NestApiDeploymentStageprodE3E60799
          - /
  DBEndpoint:
    Description: RDS PostgreSQL DB endpoint
    Value:
      Fn::GetAtt:
        - PostgreSQLDB3B2D51FD
        - Endpoint.Address
  DBSecretArn:
    Description: ARN of the DB credentials secret
    Value:
      Ref: PostgreSQLDBSecretAttachmentB7367AF5
  ApiGatewayUrl:
    Description: API Gateway URL
    Value:
      Fn::Join:
        - ""
        - - https://
          - Ref: NestApiD11556A8
          - .execute-api.us-east-1.
          - Ref: AWS::URLSuffix
          - /
          - Ref: NestApiDeploymentStageprodE3E60799
          - /
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
